подключение реакта по допкам

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contacts.lo",
   "version": "0.0.0",
   "description": "## ToDo",
-  "main": "full_calendar.html",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
